refactor: remove OrderDetailProduct entity and add OrderSpecification class  The OrderDetailProduct entity was removed as it is no longer needed in the codebase. Additionally, the OrderSpecification class was added to handle order-related specifications in the repository layer.